test/typechecker.d/invalid/sub3.surc.bad
subr(b: Bool): IO = do
	var n <- 2
	return n

main(): IO = do
	subr 4
